need to fix dark mode on antd

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,10 +16,10 @@
     --foreground: #ffffff;
   }
 
-  .ant-upload.ant-upload-drag .ant-upload-text,
+  /* .ant-upload.ant-upload-drag .ant-upload-text,
   .ant-upload.ant-upload-drag .ant-upload-hint {
     color: var(--foreground) !important;
-  }
+  } */
 
 }
 
